--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,5 @@
 title: Stremio Perfect Setup
 description: Stremio Full & Easy Total Beginner's Guide
-theme: leap-day
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+- jekyll-remote-theme
