--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: ▶︎ Stremio Perfect Setup ◀︎
+title: Stremio Perfect Setup
 description: Stremio Full & Easy Total Beginner's Guide
 google_analytics: G-PWNJZLBKC0
 remote_theme: pages-themes/leap-day@v0.2.0
