--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -4,7 +4,7 @@
 - title: Beginner Concepts 🔰
   url: guide/0-Beginner-Concepts
 
-- title: Accounts Preparation ‹ 1 🧾
+- title: Accounts Preparation ‹ 1 📝
   url: guide/1-Accounts-Preparation
 
 - title: Stremio Initialization ‹ 2 🔧
@@ -13,7 +13,7 @@
 - title: AIOStreams Setup ‹ 3 🔎
   url: guide/3-AIOStreams-Setup
 
-- title: AIOMetadata Setup ‹ 4 🗂️
+- title: AIOMetadata Setup ‹ 4 📚
   url: guide/4-AIOMetadata-Setup
 
 - title: Cinebye Cleanup ‹ 5 🧹
