--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -7,13 +7,13 @@
 - title: Accounts Preparation ‹ 1 📝
   url: guide/1-Accounts-Preparation
 
-- title: Stremio Initialization ‹ 2 🔧
+- title: Stremio Initialization ‹ 2 ⚙️
   url: guide/2-Stremio-Initialization
 
-- title: AIOStreams Setup ‹ 3 🔎
+- title: AIOStreams Setup ‹ 3 📚
   url: guide/3-AIOStreams-Setup
 
-- title: AIOMetadata Setup ‹ 4 📚
+- title: AIOMetadata Setup ‹ 4 🔎
   url: guide/4-AIOMetadata-Setup
 
 - title: Cinebye Cleanup ‹ 5 🧹
